Tag suggestions now appear in a horizontal list

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,7 @@ textarea {
 	margin-left: 5px;
 	position: relative;
 	z-index: 1000;
+	margin-right: 5px;
 }
 
 #note-form-tags-suggestions > ul {
@@ -54,27 +55,25 @@ textarea {
 	-moz-box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 	-o-box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 	-webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+	overflow: hidden;
+	height: 30px;
 }
-/*
+
 #note-form-tags-suggestions > ul li{
 	list-style: none;
-}
-
-#note-form-tags-suggestions > ul:first-child {
-	border: 0;
-}
-
-#note-form-tags-suggestions > ul li {
-	border-bottom: solid #ddd 1px;
+	float: left;
+	border-right: solid #ccc 1px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 #note-form-tags-suggestions > ul li a {
-	display: block;
-	line-height: 1.5em;
-	padding: 3px 10px 3px 10px;	
 	text-decoration: none;
+	color: #666;
+	font-weight: bold;
+	line-height: 30px;
 }
-*/
+
 #options-about #logo,
 #options-about div[data-role="content"] {
 	max-width: 350px;
