Modified styles so buttons fit in portrait on phones, fixed bad reference to tag id field

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,9 +99,15 @@ div[data-role="content"] .message {
 	font-weight: bold;
 }
 
-#note div[data-role="content"] {
+#note div[data-role="content"],
+#options-manage-tags-view div[data-role="content"] {
 	padding-left: 0;
 	padding-right: 0;
+}
+
+#options-manage-tags-view form {
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 div.note-header {
